--- a/Gingerbread/Gingerbread.csproj
+++ b/Gingerbread/Gingerbread.csproj
@@ -58,7 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.cs" />
-    <Compile Include="CmdCoreAlignPoint.cs" />
+    <Compile Include="CmdCoreFormation.cs" />
     <Compile Include="CmdCoreSimplifyCurve.cs" />
     <Compile Include="CmdCoreSplitHole.cs" />
     <Compile Include="CmdPatchBoundary.cs" />
@@ -68,6 +68,7 @@
     <Compile Include="CmdZippo.cs" />
     <Compile Include="Core\Algorithm.cs" />
     <Compile Include="Core\Basic.cs" />
+    <Compile Include="Core\SimplifyCurve.cs" />
     <Compile Include="UtilElementOfClassSelectionFilter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Settings.Designer.cs">
@@ -75,23 +76,23 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
-    <Compile Include="Core\RegionDetect.cs" />
+    <Compile Include="Core\DetectRegion.cs" />
     <Compile Include="Util.cs" />
     <Compile Include="UtilButtonSwitch.cs" />
     <Compile Include="Views\BaseWindow.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Gingerbread.addin" />
+    <Resource Include="Resources\ico\CoreFormation.ico" />
     <Resource Include="Resources\ico\Authentication.ico" />
     <Resource Include="Resources\ico\RunExport.ico" />
     <Resource Include="Resources\ico\RunReport.ico" />
     <Resource Include="Resources\ico\RunSimulation.ico" />
     <Resource Include="Resources\ico\RunViewer.ico" />
-    <Resource Include="Resources\ico\AlignPoint.ico" />
     <Resource Include="Resources\ico\Prefix.ico" />
-    <Resource Include="Resources\ico\RegionDetect.ico" />
-    <Resource Include="Resources\ico\SplitHole.ico" />
-    <Resource Include="Resources\ico\SimplifyCurve.ico" />
+    <Resource Include="Resources\ico\CoreDetectRegion.ico" />
+    <Resource Include="Resources\ico\CoreSplitHole.ico" />
+    <Resource Include="Resources\ico\CoreSimplifyCurve.ico" />
     <Resource Include="Resources\ico\SketchBoundingbox.ico" />
     <Resource Include="Resources\ico\SketchLocation.ico" />
     <Resource Include="Resources\ico\SketchFootprint.ico" />
