--- a/Gingerbread/app.config
+++ b/Gingerbread/app.config
@@ -13,6 +13,9 @@
             <setting name="tolerance" serializeAs="String">
                 <value>0.001</value>
             </setting>
+            <setting name="ShortCurveTolerance" serializeAs="String">
+                <value>0.0025602645573</value>
+            </setting>
         </Gingerbread.Properties.Settings>
     </userSettings>
 </configuration>
