--- a/Gingerbread/app.config
+++ b/Gingerbread/app.config
@@ -16,6 +16,24 @@
             <setting name="ShortCurveTolerance" serializeAs="String">
                 <value>0.0025602645573</value>
             </setting>
+            <setting name="groupTolerance" serializeAs="String">
+                <value>0.1</value>
+            </setting>
+            <setting name="expandTolerance" serializeAs="String">
+                <value>0.2</value>
+            </setting>
+            <setting name="latticeTheta" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="latticeDelta" serializeAs="String">
+                <value>0.2</value>
+            </setting>
+            <setting name="doubleTolerance" serializeAs="String">
+                <value>1E-06</value>
+            </setting>
+            <setting name="SpiderPath" serializeAs="String">
+                <value />
+            </setting>
         </Gingerbread.Properties.Settings>
     </userSettings>
 </configuration>
