--- a/Gingerbread/app.config
+++ b/Gingerbread/app.config
@@ -7,12 +7,6 @@
     </configSections>
     <userSettings>
         <Gingerbread.Properties.Settings>
-            <setting name="jointRadius" serializeAs="String">
-                <value>50</value>
-            </setting>
-            <setting name="tolerance" serializeAs="String">
-                <value>0.001</value>
-            </setting>
             <setting name="ShortCurveTolerance" serializeAs="String">
                 <value>0.0025602645573</value>
             </setting>
@@ -32,6 +26,9 @@
                 <value>1E-06</value>
             </setting>
             <setting name="SpiderPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="checkInfo" serializeAs="String">
                 <value />
             </setting>
         </Gingerbread.Properties.Settings>
