--- a/Gingerbread/app.config
+++ b/Gingerbread/app.config
@@ -10,20 +10,20 @@
             <setting name="ShortCurveTolerance" serializeAs="String">
                 <value>0.0025602645573</value>
             </setting>
-            <setting name="groupTolerance" serializeAs="String">
+            <setting name="tolGroup" serializeAs="String">
                 <value>0.1</value>
             </setting>
-            <setting name="expandTolerance" serializeAs="String">
+            <setting name="tolExpand" serializeAs="String">
                 <value>0.2</value>
             </setting>
-            <setting name="latticeTheta" serializeAs="String">
+            <setting name="tolTheta" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="latticeDelta" serializeAs="String">
+            <setting name="tolDelta" serializeAs="String">
                 <value>0.2</value>
             </setting>
-            <setting name="doubleTolerance" serializeAs="String">
-                <value>1E-06</value>
+            <setting name="tolDouble" serializeAs="String">
+                <value>1E-05</value>
             </setting>
             <setting name="SpiderPath" serializeAs="String">
                 <value />
