+ Support multi-connected region
+ A simple rectangular tessellation algorithm to split the multi-connected region into minor rectangular tiles.
+ gbRegion class
× The opening may not adhere to the right surface. Still pending for further improvement

--- a/Gingerbread/Gingerbread.csproj
+++ b/Gingerbread/Gingerbread.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Core\OrthoHull.cs" />
     <Compile Include="Core\PointAlign.cs" />
     <Compile Include="Core\CurveSimplify.cs" />
+    <Compile Include="Core\RegionTessellate.cs" />
     <Compile Include="Core\SpaceDetect.cs" />
     <Compile Include="Core\XMLGeometry.cs" />
     <Compile Include="Core\XMLSchema.cs" />
