--- a/Gingerbread/app.config
+++ b/Gingerbread/app.config
@@ -14,13 +14,13 @@
                 <value>0.1</value>
             </setting>
             <setting name="tolExpand" serializeAs="String">
-                <value>0.2</value>
+                <value>0.5</value>
             </setting>
             <setting name="tolTheta" serializeAs="String">
                 <value>0</value>
             </setting>
             <setting name="tolDelta" serializeAs="String">
-                <value>0.2</value>
+                <value>0.1</value>
             </setting>
             <setting name="tolDouble" serializeAs="String">
                 <value>1E-05</value>
@@ -30,6 +30,12 @@
             </setting>
             <setting name="checkInfo" serializeAs="String">
                 <value />
+            </setting>
+            <setting name="originX" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="originY" serializeAs="String">
+                <value>0</value>
             </setting>
         </Gingerbread.Properties.Settings>
     </userSettings>
