+ Linked .rvt reference, floorplan similarity check
+ The column and beam will also be retrieved from the linked Revit model
+ Check if the floorplan is similar to the previous one. Then, append one 'isShadowing=true' attribute to the Space label in XML

--- a/Gingerbread/app.config
+++ b/Gingerbread/app.config
@@ -37,6 +37,12 @@
             <setting name="originY" serializeAs="String">
                 <value>0</value>
             </setting>
+            <setting name="extraInfo" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="includeRef" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Gingerbread.Properties.Settings>
     </userSettings>
 </configuration>
