--- a/Gingerbread/app.config
+++ b/Gingerbread/app.config
@@ -25,9 +25,6 @@
             <setting name="tolDouble" serializeAs="String">
                 <value>1E-05</value>
             </setting>
-            <setting name="SpiderPath" serializeAs="String">
-                <value />
-            </setting>
             <setting name="checkInfo" serializeAs="String">
                 <value />
             </setting>
@@ -42,6 +39,39 @@
             </setting>
             <setting name="includeRef" serializeAs="String">
                 <value>False</value>
+            </setting>
+            <setting name="projInfo" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="spiderPath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="projName" serializeAs="String">
+                <value>GingerbreadHouse</value>
+            </setting>
+            <setting name="projAddress" serializeAs="String">
+                <value>Shanghai, China</value>
+            </setting>
+            <setting name="projDate" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="projAuthor" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="projNumber" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="originZ" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="projLatitude" serializeAs="String">
+                <value>31.4</value>
+            </setting>
+            <setting name="projLongitude" serializeAs="String">
+                <value>121.45</value>
+            </setting>
+            <setting name="projElevation" serializeAs="String">
+                <value>5.5</value>
             </setting>
         </Gingerbread.Properties.Settings>
     </userSettings>
