--- a/Gingerbread/app.config
+++ b/Gingerbread/app.config
@@ -73,6 +73,9 @@
             <setting name="projElevation" serializeAs="String">
                 <value>5.5</value>
             </setting>
+            <setting name="shadowPrev" serializeAs="String">
+                <value>True</value>
+            </setting>
         </Gingerbread.Properties.Settings>
     </userSettings>
 </configuration>
