--- a/Gingerbread/app.config
+++ b/Gingerbread/app.config
@@ -34,7 +34,7 @@
             <setting name="originY" serializeAs="String">
                 <value>0</value>
             </setting>
-            <setting name="extraInfo" serializeAs="String">
+            <setting name="exportStruct" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="includeRef" serializeAs="String">
@@ -74,6 +74,9 @@
                 <value>5.5</value>
             </setting>
             <setting name="shadowPrev" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="exportShade" serializeAs="String">
                 <value>True</value>
             </setting>
         </Gingerbread.Properties.Settings>
